libs/pavex_macros/tests/post_process/fail/not_a_function.stderr
error: #[pavex::post_process] can only be applied to free functions.
 --> tests/post_process/fail/not_a_function.rs:7:5
  |
7 |     const A: usize = 42;
  |     ^^^^^^^^^^^^^^^^^^^^
